--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,2 +1,5 @@
-@import "./variables.less";
+@import "./common/variables.less";
+@import "./mixins/clearfix.less";
 @import "./common/reset.less";
+
+@import "./components/button.less";
