component button icon spin

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -40,15 +40,10 @@
 // 圆角
 @border-radius: 2px;
 
-// 按钮高度
-@btn-height-default: 28px;
-@btn-height-small: @btn-height-default - 6;
-@btn-height-large: @btn-height-default + 6;
-
 // 按钮填充
-@btn-padding-default: 12px;
-@btn-padding-small: @btn-padding-default - 6;
-@btn-padding-large: @btn-padding-default + 6;
+@btn-padding-default: 5px 12px;
+@btn-padding-small: 3px 6px;
+@btn-padding-large: 7px 14px;
 
 // 过度动画时间
 @transition-duration: 0.3s;
