--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,13 @@
+// common
 @import "./common/variables.less";
-@import "./mixins/clearfix.less";
 @import "./common/reset.less";
 
+// mixins
+@import "./mixins/clearfix.less";
+@import "./mixins/disabled.less";
+@import "./mixins/button.less";
+
+// components
 @import "./components/button.less";
+@import "./components/icon.less";
+@import "./components/spin.less";
