compoonent button emit event

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -10,7 +10,7 @@
 // 主题颜色
 @primary-color: #29b6f6;
 @info-color: #40c4ff;
-@success-color: #5eb95e;
+@success-color: #19be6b;
 @warning-color: #faad14;
 @danger-color: #e64a19;
 
@@ -33,9 +33,7 @@
 @background-color-light: #fafafa;
 
 // 字体大小
-@font-size-default: 14px;
-@font-size-small: 14px - 2;
-@font-size-large: 14px + 2;
+@font-size-default: 12px;
 
 // 圆角
 @border-radius: 2px;
