--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -1,5 +1,4 @@
 .@{prefix}btn {
-    font-size: @font-size-default;
     color: @text-color-gray;
     background-color: @light-color;
     border-width: 1px;
@@ -11,26 +10,27 @@
     vertical-align: middle;
     white-space: nowrap;
     line-height: 1.5;
+    font-size: @font-size-default;
     cursor: pointer;
     transition: border-color @transition-duration linear, background-color @transition-duration linear, color @transition-duration linear;
 
     .@{prefix}spin {
         margin-top: -2px;
         vertical-align: middle;
-        margin-right: 6px;
+        margin-right: 4px;
     }
 
     // 尺寸
     &-size-default {
-        .btn-size(@font-size-default, @btn-padding-default);
+        .btn-size(@btn-padding-default);
     }
 
     &-size-small {
-        .btn-size(@font-size-small, @btn-padding-small);
+        .btn-size(@btn-padding-small);
     }
 
     &-size-large {
-        .btn-size(@font-size-large, @btn-padding-large);
+        .btn-size(@btn-padding-large);
     }
 
     // 主题
