--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,6 +7,9 @@
 @import "./mixins/disabled.less";
 @import "./mixins/button.less";
 
+// animation
+@import "./animation/rotating.less";
+
 // components
 @import "./components/button.less";
 @import "./components/icon.less";
