--- a/src/styles/components/spin.less
+++ b/src/styles/components/spin.less
@@ -1,19 +1,9 @@
-@keyframes spinRotate {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
 .@{prefix}spin {
     width: 14px;
     height: 14px;
     display: inline-block;
     line-height: 14px;
-    animation: spinRotate 1s infinite linear;
+    animation: rotating 1s infinite linear;
     font-size: 14px;
 
     &-default {
