--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -14,3 +14,5 @@
 @import "./components/button.less";
 @import "./components/icon.less";
 @import "./components/spin.less";
+@import "./components/row.less";
+@import "./components/col.less";
