--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -16,3 +16,6 @@
 @import "./components/spin.less";
 @import "./components/row.less";
 @import "./components/col.less";
+
+// display
+@import "./common/display.less";
