component col fix: fix display style

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -74,7 +74,7 @@
  ~"(max-width: @{lg-})",
  ~"(min-width: @{lg})",
  ~"(min-width: @{lg}) and (max-width: @{xl})",
- ~"(max-width: @{xl}-)",
+ ~"(max-width: @{xl-})",
  ~"(min-width: @{xl})";
 
 @break-spec-name: xs-only ,sm-and-up ,sm-only ,sm-and-down ,md-and-up ,md-only ,md-and-down ,lg-and-up ,lg-only ,lg-and-down ,xl-only;
