--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,8 +4,10 @@
 
 // mixins
 @import "./mixins/clearfix.less";
+@import "./mixins/media.less";
 @import "./mixins/disabled.less";
 @import "./mixins/button.less";
+@import "./mixins/grid.less";
 
 // animation
 @import "./animation/rotating.less";
@@ -14,8 +16,4 @@
 @import "./components/button.less";
 @import "./components/icon.less";
 @import "./components/spin.less";
-@import "./components/row.less";
-@import "./components/col.less";
-
-// display
-@import "./common/display.less";
+@import "./components/grid.less";
