remove props customClass

--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -34,28 +34,28 @@
     }
 
     // 主题
-    &-default {
+    &-type-default {
         border-color: @border-color;
         .btn-color(@light-color, @primary-color, false);
     }
 
-    &-primary {
+    &-type-primary {
         .btn-color(@light-color, @primary-color);
     }
 
-    &-info {
+    &-type-info {
         .btn-color(@light-color, @info-color);
     }
 
-    &-success {
+    &-type-success {
         .btn-color(@light-color, @success-color);
     }
 
-    &-warning {
+    &-type-warning {
         .btn-color(@light-color, @warning-color);
     }
 
-    &-danger {
+    &-type-danger {
         .btn-color(@light-color, @danger-color);
     }
 
