component popup & tooltip dev

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -6,6 +6,8 @@
 
 // 亮色
 @light-color: #fff;
+// 暗色
+@dark-color: #303133;
 
 // 主题颜色
 @primary-color: #29b6f6;
@@ -15,7 +17,7 @@
 @danger-color: #e64a19;
 
 // 文字颜色
-@text-color-base: #212121;
+@text-color-base: #323135;
 @text-color-gray: #616161;
 @text-color-gray-light: #9e9e9e;
 
@@ -89,3 +91,6 @@ grid-lg-and-up,
 grid-lg-only,
 grid-lg-and-down,
 grid-xl-only;
+
+// tooltip
+@tooltip-padding: 6px 12px;
