--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -17,3 +17,4 @@
 @import "./components/icon.less";
 @import "./components/spin.less";
 @import "./components/grid.less";
+@import "./components/tooltip.less";
