component layout update: main complete

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -48,6 +48,18 @@
 // 过度动画时间
 @transition-duration: 0.3s;
 
+/* Header
+  --------------------------*/
+@header-padding: 0 20px;
+
+/* Footer
+--------------------------*/
+@footer-padding: 0 20px;
+
+/* Main
+--------------------------*/
+@main-padding: 20px;
+
 // 栅格部分
 // 断点
 @grid-sm: 576px;
