--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -19,3 +19,4 @@
 @import "./components/grid.less";
 @import "./components/transition.less";
 @import "./components/tooltip.less";
+@import "./components/layout.less";
