--- a/src/styles/components/layout.less
+++ b/src/styles/components/layout.less
@@ -10,3 +10,12 @@
         flex-direction: column;
     }
 }
+
+.@{prefix}main {
+    display: block;
+    flex: 1;
+    flex-basis: auto;
+    overflow: auto;
+    box-sizing: border-box;
+    padding: @main-padding;
+}
