component layout update: main complete

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -18,3 +18,4 @@
 @import "./components/spin.less";
 @import "./components/grid.less";
 @import "./components/tooltip.less";
+@import "./components/layout.less";
