component layout update: header complete

--- a/src/styles/components/layout.less
+++ b/src/styles/components/layout.less
@@ -19,3 +19,8 @@
     box-sizing: border-box;
     padding: @main-padding;
 }
+
+.@{prefix}header {
+    padding: @header-padding;
+    flex-shrink: 0;
+}
