component layout update: footer complete

--- a/src/styles/components/layout.less
+++ b/src/styles/components/layout.less
@@ -24,3 +24,8 @@
     padding: @header-padding;
     flex-shrink: 0;
 }
+
+.@{prefix}footer {
+    padding: @footer-padding;
+    flex-shrink: 0;
+}
