component layout update: aside complete

--- a/src/styles/components/layout.less
+++ b/src/styles/components/layout.less
@@ -29,3 +29,9 @@
     padding: @footer-padding;
     flex-shrink: 0;
 }
+
+.@{prefix}aside {
+    overflow: auto;
+    box-sizing: border-box;
+    flex-shrink: 0;
+}
