--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -93,4 +93,5 @@ grid-lg-and-down,
 grid-xl-only;
 
 // tooltip
-@tooltip-padding: 6px 12px;
+@tooltip-padding: 3px 8px;
+@tooltip-bg-color: rgba(23, 35, 61, 0.9);
