--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -11,10 +11,12 @@
 
 // animation
 @import "./animation/rotating.less";
+@import "./animation/fade.less";
 
 // components
 @import "./components/button.less";
 @import "./components/icon.less";
 @import "./components/spin.less";
 @import "./components/grid.less";
+@import "./components/transition.less";
 @import "./components/tooltip.less";
