--- a/src/styles/components/tooltip.less
+++ b/src/styles/components/tooltip.less
@@ -1,3 +1,7 @@
+.@{prefix}tooltip-trigger {
+    display: inline-block;
+}
+
 .@{prefix}tooltip {
     .@{prefix}tooltip-inner {
         font-size: @font-size-default;
@@ -11,7 +15,7 @@
 
     &::before {
         content: '';
-        border: 5px solid transparent;
+        border: 4px solid transparent;
         display: inline-block;
         position: absolute;
     }
@@ -19,28 +23,28 @@
     &-placement-top,
     &-placement-top-left,
     &-placement-top-right {
-        padding-bottom: 5px;
+        padding-bottom: 4px;
         transform-origin: bottom;
 
         &::before {
             border-top-color: @tooltip-bg-color;
-            bottom: -5px;
+            bottom: -4px;
             left: 50%;
-            margin-left: -5px;
+            margin-left: -4px;
         }
     }
 
     &-placement-bottom,
     &-placement-bottom-left,
     &-placement-bottom-right {
-        padding-top: 5px;
+        padding-top: 4px;
         transform-origin: top;
 
         &::before {
             border-bottom-color: @tooltip-bg-color;
-            top: -5px;
+            top: -4px;
             left: 50%;
-            margin-left: -5px;
+            margin-left: -4px;
         }
     }
 
@@ -61,28 +65,28 @@
     &-placement-left,
     &-placement-left-bottom,
     &-placement-left-top {
-        padding-right: 5px;
+        padding-right: 4px;
         transform-origin: right;
 
         &::before {
             border-left-color: @tooltip-bg-color;
-            right: -5px;
+            right: -4px;
             top: 50%;
-            margin-top: -5px;
+            margin-top: -4px;
         }
     }
 
     &-placement-right,
     &-placement-right-bottom,
     &-placement-right-top {
-        padding-left: 5px;
+        padding-left: 4px;
         transform-origin: left;
 
         &::before {
             border-right-color: @tooltip-bg-color;
-            left: -5px;
+            left: -4px;
             top: 50%;
-            margin-top: -5px;
+            margin-top: -4px;
         }
     }
 
