component layout fix: change width & height prop to style

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -48,17 +48,19 @@
 // 过度动画时间
 @transition-duration: 0.3s;
 
-/* Header
-  --------------------------*/
+//header basis property.
 @header-padding: 0 20px;
+@header-default-height: 55px;
 
-/* Footer
---------------------------*/
+//footer basis property.
 @footer-padding: 0 20px;
+@footer-default-height: 55px;
 
-/* Main
---------------------------*/
+// main basis property.
 @main-padding: 20px;
+
+// aside basis property.
+@aside-default-width: 250px;
 
 // 栅格部分
 // 断点
