--- a/src/styles/components/layout.less
+++ b/src/styles/components/layout.less
@@ -21,17 +21,20 @@
 }
 
 .@{prefix}header {
-    padding: @header-padding;
     flex-shrink: 0;
+    padding: @header-padding;
+    height: @header-default-height;
 }
 
 .@{prefix}footer {
-    padding: @footer-padding;
     flex-shrink: 0;
+    padding: @footer-padding;
+    height: @footer-default-height;
 }
 
 .@{prefix}aside {
     overflow: auto;
     box-sizing: border-box;
     flex-shrink: 0;
+    width: @aside-default-width;
 }
