修改代码格式

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -48,19 +48,13 @@
 // 过度动画时间
 @transition-duration: 0.3s;
 
-//header basis property.
+// layout
 @header-padding: 0 20px;
 @header-default-height: 55px;
-
-//footer basis property.
 @footer-padding: 0 20px;
 @footer-default-height: 55px;
-
-// main basis property.
 @main-padding: 20px;
-
-// aside basis property.
-@aside-default-width: 250px;
+@aside-default-width: 220px;
 
 // 栅格部分
 // 断点
