component tooltip done

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -35,15 +35,18 @@
 @background-color-light: #fafafa;
 
 // 字体大小
-@font-size-default: 12px;
+@font-size-default: 14px;
 
 // 圆角
 @border-radius: 2px;
 
+// 同类组件间距
+@same-component-gutter: 12px;
+
 // 按钮填充
-@btn-padding-default: 5px 12px;
-@btn-padding-small: 3px 6px;
-@btn-padding-large: 7px 14px;
+@btn-padding-default: 4px 15px 5px 15px;
+@btn-padding-small: 3px 12px 4px 12px;
+@btn-padding-large: 7px 18px 8px 18px;
 
 // 过度动画时间
 @transition-duration: 0.3s;
@@ -101,5 +104,5 @@ grid-lg-and-down,
 grid-xl-only;
 
 // tooltip
-@tooltip-padding: 3px 8px;
-@tooltip-bg-color: rgba(23, 35, 61, 0.9);
+@tooltip-padding: 4px 8px;
+@tooltip-bg-color: rgba(23, 35, 61, 0.75);
