--- a/src/styles/components/tooltip.less
+++ b/src/styles/components/tooltip.less
@@ -1,5 +1,9 @@
 .@{prefix}tooltip-trigger {
     display: inline-block;
+
+    + .@{prefix}tooltip-trigger {
+        margin-left: @same-component-gutter;
+    }
 }
 
 .@{prefix}tooltip {
