--- a/src/styles/mixins/button.less
+++ b/src/styles/mixins/button.less
@@ -1,5 +1,6 @@
-.btn-size(@padding) {
+.btn-size(@padding, @font-size) {
     padding: @padding;
+    font-size: @font-size;
 }
 
 .btn-color(@text-color, @bg-color, @normal: true) when (@normal = true) {
