--- a/src/styles/components/button.less
+++ b/src/styles/components/button.less
@@ -10,7 +10,6 @@
     vertical-align: middle;
     white-space: nowrap;
     line-height: 1.5;
-    font-size: @font-size-default;
     cursor: pointer;
     transition: border-color @transition-duration linear, background-color @transition-duration linear, color @transition-duration linear;
 
@@ -22,15 +21,15 @@
 
     // 尺寸
     &-size-default {
-        .btn-size(@btn-padding-default);
+        .btn-size(@btn-padding-default, @font-size-default);
     }
 
     &-size-small {
-        .btn-size(@btn-padding-small);
+        .btn-size(@btn-padding-small, @font-size-default - 2px);
     }
 
     &-size-large {
-        .btn-size(@btn-padding-large);
+        .btn-size(@btn-padding-large, @font-size-default + 2px);
     }
 
     // 主题
