component popover init

--- a/src/styles/animation/transition.less
+++ b/src/styles/animation/transition.less
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-    transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in-out;
 }
 
 .fade-enter,
@@ -14,7 +14,7 @@
 .appear-top-left-leave-active,
 .appear-top-right-enter-active,
 .appear-top-right-leave-active {
-    transition: opacity 0.2s ease-in, transform 0.2s ease-in;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .appear-top-enter,
@@ -34,7 +34,7 @@
 .appear-bottom-left-leave-active,
 .appear-bottom-right-enter-active,
 .appear-bottom-right-leave-active {
-    transition: opacity 0.2s ease-in, transform 0.2s ease-in;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .appear-bottom-enter,
@@ -54,7 +54,7 @@
 .appear-left-top-leave-active,
 .appear-left-bottom-enter-active,
 .appear-left-bottom-leave-active {
-    transition: opacity 0.2s ease-in, transform 0.2s ease-in;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .appear-left-enter,
@@ -74,7 +74,7 @@
 .appear-right-top-leave-active,
 .appear-right-bottom-enter-active,
 .appear-right-bottom-leave-active {
-    transition: opacity 0.2s ease-in, transform 0.2s ease-in;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
 .appear-right-enter,
