--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -106,3 +106,6 @@ grid-xl-only;
 // tooltip
 @tooltip-padding: 4px 8px;
 @tooltip-bg-color: rgba(23, 35, 61, 0.75);
+
+// popover
+@popover-padding: 10px 15px;
