--- a/src/styles/components/tooltip.less
+++ b/src/styles/components/tooltip.less
@@ -7,7 +7,7 @@
 }
 
 .@{prefix}tooltip {
-    .@{prefix}tooltip-inner {
+    > .@{prefix}tooltip-inner {
         font-size: @font-size-default;
         border-radius: @border-radius;
         background-color: @tooltip-bg-color;
