--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -20,3 +20,4 @@
 @import "./components/grid.less";
 @import "./components/tooltip.less";
 @import "./components/layout.less";
+@import "./components/popover.less";
