component icon complete api

--- a/src/styles/components/icon/font.less
+++ b/src/styles/components/icon/font.less
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'rbt-iconfont';
+    font-family: 'rabbit';
     src: url("./fonts/iconfont.eot");
     src: url("./fonts/iconfont.eot#iefix") format('embedded-opentype'), url("./fonts/iconfont.ttf") format('truetype'), url("./fonts/iconfont.woff") format('woff'), url("./fonts/iconfont.svg#sophon") format('svg');
 }
@@ -16,5 +16,5 @@
     text-align: center;
     display: inline-block;
     vertical-align: baseline;
-    font-family: 'rbt-iconfont' !important;
+    font-family: 'rabbit' !important;
 }
