--- a/src/styles/components/icon/icons.less
+++ b/src/styles/components/icon/icons.less
@@ -1,7 +1,67 @@
-.@{prefix}icon-spin:before {
-    content: "\e870";
+.@{prefix}icon-down:before {
+    content: "\e6b4";
+}
+
+.@{prefix}icon-error:before {
+    content: "\e6b5";
+}
+
+.@{prefix}icon-error-f:before {
+    content: "\e6b6";
+}
+
+.@{prefix}icon-info:before {
+    content: "\e6b7";
+}
+
+.@{prefix}icon-info-f:before {
+    content: "\e6b8";
 }
 
 .@{prefix}icon-close:before {
-    content: "\e619";
+    content: "\e6b9";
+}
+
+.@{prefix}icon-left:before {
+    content: "\e6ba";
+}
+
+.@{prefix}icon-question:before {
+    content: "\e6bb";
+}
+
+.@{prefix}icon-paging-left:before {
+    content: "\e6bc";
+}
+
+.@{prefix}icon-paging-right:before {
+    content: "\e6bd";
+}
+
+.@{prefix}icon-right:before {
+    content: "\e6be";
+}
+
+.@{prefix}icon-spin:before {
+    content: "\e6bf";
+}
+
+.@{prefix}icon-success-f:before {
+    content: "\e6c0";
+}
+
+.@{prefix}icon-warning-f:before {
+    content: "\e6c1";
+}
+
+.@{prefix}icon-top:before {
+    content: "\e6c2";
+}
+
+.@{prefix}icon-warning:before {
+    content: "\e6c3";
+}
+
+.@{prefix}icon-success:before {
+    content: "\e6c4";
 }
