--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -6,6 +6,7 @@
 @import "./mixins/clearfix.less";
 @import "./mixins/media.less";
 @import "./mixins/disabled.less";
+@import "./mixins/spin.less";
 @import "./mixins/button.less";
 @import "./mixins/grid.less";
 
