component modal dev

--- a/src/styles/common/variables.less
+++ b/src/styles/common/variables.less
@@ -40,7 +40,8 @@
 // 圆角
 @border-radius: 2px;
 
-// 同类组件间距
+// 组件间距
+@component-gutter: 20px;
 @same-component-gutter: 12px;
 
 // 按钮填充
@@ -109,3 +110,6 @@ grid-xl-only;
 
 // popover
 @popover-padding: 10px 15px;
+
+// modal
+@modal-mask-bg-color: rgba(0, 0, 0, 0.65);
