--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -22,3 +22,4 @@
 @import "./components/tooltip.less";
 @import "./components/layout.less";
 @import "./components/popover.less";
+@import "./components/modal.less";
